logs/searchtester.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/enum'...
Listing './lib/python3.5/site-packages/enum34-1.1.6.dist-info'...
Listing './lib/python3.5/site-packages/eventlet'...
Listing './lib/python3.5/site-packages/eventlet/green'...
Listing './lib/python3.5/site-packages/eventlet/green/OpenSSL'...
Listing './lib/python3.5/site-packages/eventlet/green/http'...
Listing './lib/python3.5/site-packages/eventlet/green/urllib'...
Listing './lib/python3.5/site-packages/eventlet/greenio'...
Listing './lib/python3.5/site-packages/eventlet/hubs'...
Listing './lib/python3.5/site-packages/eventlet/support'...
Listing './lib/python3.5/site-packages/eventlet/support/dns'...
Listing './lib/python3.5/site-packages/eventlet/support/dns/rdtypes'...
Listing './lib/python3.5/site-packages/eventlet/support/dns/rdtypes/ANY'...
Listing './lib/python3.5/site-packages/eventlet/support/dns/rdtypes/IN'...
Listing './lib/python3.5/site-packages/eventlet/zipkin'...
Listing './lib/python3.5/site-packages/eventlet/zipkin/_thrift'...
Listing './lib/python3.5/site-packages/eventlet/zipkin/_thrift/zipkinCore'...
Listing './lib/python3.5/site-packages/eventlet-0.22.0.dist-info'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/linecache2'...
Listing './lib/python3.5/site-packages/linecache2/tests'...
Listing './lib/python3.5/site-packages/linecache2-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/searchtester'...
Compiling './lib/python3.5/site-packages/searchtester/__init__.py'...
***   File "./lib/python3.5/site-packages/searchtester/__init__.py", line 41
    print "Calculating scores..."
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/searchtester/core.py'...
***   File "./lib/python3.5/site-packages/searchtester/core.py", line 101
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/searchtester-0.6.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/traceback2'...
Listing './lib/python3.5/site-packages/traceback2/tests'...
Listing './lib/python3.5/site-packages/traceback2-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/unittest2'...
Listing './lib/python3.5/site-packages/unittest2/test'...
Listing './lib/python3.5/site-packages/unittest2-1.1.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
